tests/agl/rejections/parse/while_before_for.agl
while true for x in [1, 2] do
  ()
done
